--- a/Tribute.html
+++ b/Tribute.html
@@ -1,3 +1,4 @@
+<link href="Stylesheet.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital@1&display=swap" rel="stylesheet">
@@ -6,7 +7,7 @@
   <p id="title-caption">The suffering and legacy of a talented artist</p>
   <figure id="img-div">
     <img id="image" 
-         src="https://previews.dropbox.com/p/thumb/ABTHEMzkKRQ4zJixuI_IzknijAqQgZ7boXgUvrn6gH8sNiL3BRJeLQ9W5bBqJ_f8bNZRIqHlGsD9v7H9TxmHmuLwQBGFz4Ql-w4Dkh84kKPsrdjVS3R0wMxWpKSK3-ZHvKCyzEyCcViaj4gk5M7Vyt7R_3828T5Ai0QbY5vgapW4pbB9tclo7orflWxy6jDfhQp94s-UgNZjbK85eIJfo59xyP4YhGvp2GmrH-Tyw-1j3g1m4npV08i7OBqivuFJzuck9ySphTdyqYxwV7ZPwKJWvPigvTrP0Ss8YHZqRu-lEHJGFBL10y9kzzna-LkwBKGxZOcyhZ-GjgiOxNfe4pA8RNaxLeej0Iz5gPGYBkHqpw/p.jpeg?size=2048x1536&size_mode=3"
+         src="https://www.dropbox.com/s/g8384qghaybgilv/vangoghmuseum-s0016V1962-800.jpg?raw=1"
          alt="Self portrait of Vincent Van Gogh"/>
     <figcaption id="img-caption">
       Self-portrait of Vincent Van Gogh with Grey Felt Hat (1887-88)
